# iOS-app-launch-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
.github/: copilot-instructions.md
src/ios_factory/: crew.py  main.py  tools.py
src/ios_factory/config/: agents.yaml  tasks.yaml  tasks_gate.yaml  tasks_pipeline.yaml
